[package]
name = "inarybay"
version = "0.1.0"
edition = "2021"

[dependencies]
enum_dispatch = "0.3.12"
gc = { version = "0.5.0", features = ["derive"] }
genemichaels = "0.1.21"
hex = "0.4.3"
itertools = "0.11.0"
proc-macro2 = "1.0.66"
quote = "1.0.32"
samevariant = "0.0.1"
syn = { version = "1.0.109", features = ["full"] }

[workspace]
members = ["runtime", "crate_tests", "crate_tests_build"]
