[package]
name = "inarybay"
version = "0.1.0"
edition = "2021"
license = "ISC"
description = "Graph-based binary format (de)serializer generator"
repository = "https://github.com/andrewbaxter/inarybay"
readme = "readme.md"

[dependencies]
enum_dispatch = "0.3.12"
gc = { version = "0.5.0", features = ["derive"] }
genemichaels = "0.1.21"
hex = "0.4.3"
itertools = "0.11.0"
proc-macro2 = "1.0.66"
quote = "1.0.32"
regex = "1.9.4"
syn = { version = "1.0.109", features = ["full"] }

[workspace]
members = ["runtime", "crate_tests", "crate_tests_build"]
