[package]
name = "inarybay"
version = "0.1.1"
edition = "2021"
license = "ISC"
description = "Graph-based binary format (de)serializer generator"
repository = "https://github.com/andrewbaxter/inarybay"
readme = "readme.md"

[dependencies]
enum_dispatch = "0.3"
gc = { version = "0.5", features = ["derive"] }
genemichaels = "0.2"
hex = "0.4"
itertools = "0.11"
proc-macro2 = "1"
quote = "1"
regex = "1"
syn = { version = "1", features = ["full"] }

[workspace]
members = ["runtime", "crate_tests", "crate_tests_build"]
