[package]
name = "inarybay-runtime"
version = "0.1.1"
edition = "2021"
license = "ISC"
description = "Graph-based binary format (de)serializer generator (runtime)"
repository = "https://github.com/andrewbaxter/inarybay"
readme = "../readme.md"

[dependencies]
futures = { version = "0.3", optional = true }

[features]
default = []
async = ["dep:futures"]
